--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -129,7 +129,7 @@ spring-boot-plus:
   ######################## Spring Shiro start ########################
   shiro:
     # 是否启用
-    enable: false
+    enable: true
     # shiro ini 多行字符串配置
     filter-chain-definitions: |
       /=anon
